fix scrollbar layout shift

--- a/styl.css
+++ b/styl.css
@@ -214,8 +214,7 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "Inter";
-  overflow-x: hidden;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 hr {
